solve some isssue
