# src/routes/api/tourRoute.ts
@@ -6,26 +6,24 @@ import { uploadToCloudinary } from '../../services/StorageCloud.services'
 const routes = Router()
 const tour = new TourController()
 routes.post(
-  '/',
+  '/tour',
   uploadToCloudinary.fields([
     { name: 'cloudImages', maxCount: 20 },
     { name: 'localImages', maxCount: 20 },
   ]),
-  tour.createTour,
-  () => {},
-)
+  tour.createTour,() => {})
 routes.get('/', tour.getAllTours)
-routes.get('/:id', tour.getTourById )
+routes.get('/tour/:id', tour.getTourById )
 routes.get('/search',tour.searchTours)
 routes.put(
-  '/:id',
+  '/tour/:id',
   uploadToCloudinary.fields([
     { name: 'cloudImages', maxCount: 20 },
     { name: 'localImages', maxCount: 20 },
   ]),
   tour.updateTour,
 )
-routes.put('/soft_delete',tour.softDeleteTour)
-routes.delete('/:id', tour.deleteTour)
+routes.put('/tour/soft_delete',tour.softDeleteTour)
+routes.delete('/tour/:id', tour.deleteTour)
 
 export default routes
